<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="45dp"
    android:background="@color/white"
    android:gravity="center">

    <ImageView
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:src="@drawable/logo_light"
        android:padding="10dp"/>

    <EditText
        android:id="@+id/usernameEdit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:maxLines="1"
        android:inputType="text"
        style="@style/Theme.Spic.Widget.EditText"
        android:hint="@string/username"/>

    <EditText
        android:id="@+id/passwordEdit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:inputType="textPassword"
        android:maxLines="1"
        style="@style/Theme.Spic.Widget.EditText"
        android:hint="@string/password"
        />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:text="@string/login"
        style="@style/Theme.Spic.Widget.Button"/>

    <Button
        android:id="@+id/signupButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:text="@string/sign_up"
        style="@style/Theme.Spic.Widget.Button.Secondary"/>
</LinearLayout>