<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:background="@color/white"
    android:paddingBottom="20dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_gravity="start"
        android:gravity="center"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/edit_team"
        android:textColor="@color/dark"
        android:textSize= "18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
        <EditText
            android:id="@+id/teamName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:maxLines="1"
            android:hint="@string/team"
            android:inputType="text"
            style="@style/Theme.Spic.Widget.EditText"
            />
        <EditText
            android:id="@+id/teamCodeEdit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="15dp"
            android:layout_weight="1"
            android:maxLines="1"
            android:hint="@string/team_code"
            android:inputType="text"
            style="@style/Theme.Spic.Widget.EditText"
            />
    </LinearLayout>

    <EditText
        android:id="@+id/activity"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:maxLines="1"
        android:hint="@string/activity"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/profilePhoto"
        style="@style/Theme.Spic.Widget.EditText" />

    <Button
        android:id="@+id/saveChangesButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="25dp"
        android:text="@string/save"
        android:textSize="15sp"
        style="@style/Theme.Spic.Widget.Button"/>

</LinearLayout>
