<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="20dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/teamListSpinner"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="1"
            tools:listitem="@layout/layout_spinner_text_item"
            style="@style/Theme.Spic.Widget.EditText"/>
        <Button
            android:id="@+id/saveChangesButton"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginLeft="10dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/save"
            android:textSize="15sp"
            style="@style/Theme.Spic.Widget.Button"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <EditText
            android:id="@+id/nameEdit"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginRight="15dp"
            android:maxLines="1"
            android:layout_weight="1"
            android:hint="@string/name"
            style="@style/Theme.Spic.Widget.EditText"
            app:layout_constraintTop_toBottomOf="@id/name"
            />
        <Spinner
            android:id="@+id/typeListSpinner"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="1"
            tools:listitem="@layout/layout_spinner_text_item"
            style="@style/Theme.Spic.Widget.EditText"/>
    </LinearLayout>

    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="15dp"
        android:maxLines="2"
        android:inputType="textMultiLine"
        android:gravity="top|left"
        android:hint="@string/description"
        style="@style/Theme.Spic.Widget.EditText"
        app:layout_constraintTop_toBottomOf="@id/name"
        />

    <EditText
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:layout_marginTop="15dp"
        android:maxLines="1"
        android:hint="@string/eventDate"
        android:editable="false"
        android:inputType="date"
        app:layout_constraintTop_toBottomOf="@+id/nameEdit"
        style="@style/Theme.Spic.Widget.EditText"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/date"
        >
        <EditText
            android:id="@+id/startTime"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:maxLines="1"
            android:hint="@string/startTime"
            android:inputType="time"
            app:layout_constraintTop_toBottomOf="@+id/profilePhoto"
            style="@style/Theme.Spic.Widget.EditText"
            />

        <EditText
            android:id="@+id/endTime"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:layout_weight="1"
            android:hint="@string/endTime"
            android:maxLines="1"
            android:inputType="time"
            app:layout_constraintTop_toBottomOf="@+id/profilePhoto"
            style="@style/Theme.Spic.Widget.EditText"
            />

    </LinearLayout>

</LinearLayout>