<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:background="@color/white"
    android:paddingBottom="20dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_gravity="start"
        android:gravity="center"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/update_contacts"
        android:textColor="@color/dark"
        android:textSize= "18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_medium"
        android:textSize="15sp"
        android:text="@string/phoneNumber"
        android:paddingLeft="20dp"
        />

    <EditText
        android:id="@+id/phoneNumber"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:inputType="phone"
        android:maxLines="1"
        app:layout_constraintTop_toBottomOf="@+id/profilePhoto"
        style="@style/Theme.Spic.Widget.EditText" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/montserrat_medium"
        android:textSize="15sp"
        android:text="@string/email"
        android:paddingLeft="20dp"
        />

    <EditText
        android:id="@+id/emailAddress"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        app:layout_constraintTop_toBottomOf="@+id/profilePhoto"
        style="@style/Theme.Spic.Widget.EditText" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/montserrat_medium"
        android:textSize="15sp"
        android:text="@string/description"
        android:paddingLeft="20dp"
        />

    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:inputType="textMultiLine"
        android:gravity="top|left"
        android:maxLines="3"
        app:layout_constraintTop_toBottomOf="@+id/profilePhoto"
        style="@style/Theme.Spic.Widget.EditText" />

    <Button
        android:id="@+id/saveChangesButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="25dp"
        android:text="@string/save"
        android:textSize="15sp"
        style="@style/Theme.Spic.Widget.Button"/>

</LinearLayout>
