<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@color/white">

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:padding="20dp"
        android:background="@color/accent"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/profile"
        android:textColor="@color/white"
        android:textSize="@dimen/titleSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
        <LinearLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="@dimen/profilePhotoSize"
                android:layout_height="@dimen/profilePhotoSize"
                android:layout_marginTop="20dp"
                >
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profilePhoto"
                    android:layout_width="@dimen/profilePhotoSize"
                    android:layout_height="@dimen/profilePhotoSize"
                    android:src="@drawable/placeholder"
                    app:civ_border_color="@color/accent"
                    app:civ_border_width="2dp"
                    />
                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/ic_photo_fill"/>
            </RelativeLayout>
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="20dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_regular"
                        android:text="@string/name"
                        android:textColor="@color/dark"/>
                    <EditText
                        android:id="@+id/nameEdit"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:inputType="textPersonName"
                        android:maxLines="1"
                        android:layout_marginTop="10dp"
                        app:layout_constraintTop_toBottomOf="@+id/profilePhoto"
                        style="@style/Theme.Spic.Widget.EditText"
                        />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/montserrat_regular"
                            android:text="@string/birthDate"
                            android:textColor="@color/dark"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/montserrat_regular"
                            android:text="@string/gender"
                            android:textColor="@color/dark"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp">
                        <EditText
                            android:id="@+id/birthDate"
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:layout_weight="1"
                            android:maxLines="1"
                            android:editable="false"
                            android:inputType="date"
                            style="@style/Theme.Spic.Widget.EditText"
                            />
                        <Spinner
                            android:id="@+id/genderSpinner"
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:layout_marginStart="10dp"
                            android:layout_weight="1"
                            android:entries="@array/genders"
                            style="@style/Theme.Spic.Widget.EditText"
                            android:layout_marginLeft="10dp" />
                    </LinearLayout>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/montserrat_regular"
                        android:text="@string/phoneNumber"
                        android:textColor="@color/dark"/>
                    <EditText
                        android:id="@+id/phoneEdit"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_marginTop="10dp"
                        android:maxLines="1"
                        android:inputType="phone"
                        app:layout_constraintTop_toBottomOf="@+id/profilePhoto"
                        style="@style/Theme.Spic.Widget.EditText" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/montserrat_regular"
                        android:text="@string/email"
                        android:textColor="@color/dark"/>

                    <EditText
                        android:id="@+id/emailEdit"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_marginTop="10dp"
                        android:maxLines="1"
                        android:inputType="textEmailAddress"
                        app:layout_constraintTop_toBottomOf="@+id/profilePhoto"
                        style="@style/Theme.Spic.Widget.EditText" />

                    <Button
                        android:id="@+id/saveChangesButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="25dp"
                        android:layout_marginLeft="25dp"
                        android:layout_marginEnd="25dp"
                        android:layout_marginRight="25dp"
                        android:layout_marginTop="25dp"
                        android:text="@string/save_changes"
                        style="@style/Theme.Spic.Widget.Button"/>

                </LinearLayout>
            </ScrollView>
        </LinearLayout>
</LinearLayout>
